Fix card spacing issue

--- a/src/AppServices/components/MarketingPage/MarketingPage.css
+++ b/src/AppServices/components/MarketingPage/MarketingPage.css
@@ -140,3 +140,10 @@
   width: 100%;
   height: 100%;
 }
+
+.kafka-overview--page-section--marketing {
+  --pf-c-page__main-section--PaddingTop: var(--pf-global--spacer--xs);
+  --pf-c-page__main-section--PaddingRight: var(--pf-global--spacer--lg);
+  --pf-c-page__main-section--PaddingBottom: var(--pf-global--spacer--xl);
+  --pf-c-page__main-section--PaddingLeft: var(--pf-global--spacer--lg);
+}
